--- a/package.json
+++ b/package.json
@@ -11,8 +11,33 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "mysql": "^2.18.1"
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
+    "@emailjs/browser": "^4.4.1",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
+    "cloudinary": "^2.5.1",
+    "cors": "^2.8.5",
+    "cr": "^0.1.0",
+    "dotenv": "^16.4.7",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
+    "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.10.1",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "mysql": "^2.18.1",
+    "nanoid": "^5.1.0",
+    "node": "^22.13.1",
+    "path": "^0.12.7",
+    "react-chartjs-2": "^5.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
