--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
+
 {
   "name": "nodejsbce",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "type": "module",
     "start": "node server.js"
   },
   "keywords": [],
