--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "type": "module",
-    "start": "node serverf.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
